--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,6 +12,6 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
       - run: |
-          echo: "Hello World!"
-          echo: "Goodbye!"
-          echo: "Hie"
+          echo "Hello World!"
+          echo "Goodbye!"
+          echo "Hie"
