--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,6 +1,6 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GithubActions
-on: [push]
+on: [pull_request]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
